# holiday-cli

./: .env  Cargo.toml
src/: data.rs  db.rs  main.rs
