[package]
name = "holiday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
# sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "mysql" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
